add docs and grpc route
